@@ -1,3 +1,7 @@
+2018-12-14 belangeo <belangeo@gmail.com>
+
+    * Fixed break-point-function tables malloc() corruption.
+
 2018-12-11 belangeo <belangeo@gmail.com>
 
     * Added PyoObjectBase.preventAutoStart() method to stop propagation when
